"se creo correctamente busqueda Altura y Anchura"